Modifs gitignore, ajout images

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,9 @@ config/settings.inc.php
 
 log/*.log
 
-img/*
-!img/index.php
-!img/*/index.php
+#img/*
+#!img/index.php
+#!img/*/index.php
 
 tools/smarty*/cache/*.php
 !tools/smarty*/cache/index.php
