Modifs gitignore, ajout settings

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ cache/smarty/compile/*
 cache/tcpdf/*
 !cache/tcpdf/index.php
 
-config/xml/*.xml
-config/settings.inc.php
+#config/xml/*.xml
+#config/settings.inc.php
 
 log/*.log
 
